[gd_scene load_steps=3 format=3 uid="uid://m06ul8qtuxw0"]

[ext_resource type="PackedScene" uid="uid://b8lp1k4t1xcxu" path="res://scenes/UI/button.tscn" id="1_8t474"]
[ext_resource type="Script" path="res://scenes/UI/options.gd" id="1_525i1"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_525i1")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(640, 480)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -240.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -34.0
offset_right = 80.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2

[node name="ExitToTitleButton" parent="VBoxContainer" instance=ExtResource("1_8t474")]
layout_mode = 2
text = "Exit to Title"

[node name="BackButton" parent="VBoxContainer" instance=ExtResource("1_8t474")]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/ExitToTitleButton" to="." method="_on_exit_to_title_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
